feat(#3): add connection validation to EuroCoinCollectionSqliteRepository, add javadoc documentation in interface and implementation